2007-10-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-stroke.c: formatting.

2007-10-12  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.[ch]: massively simplified the
	fixed rule widget showing/hiding, fixed their spacing, make sure
	they don't cause UI resizing on rule change.

2007-10-12  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorselectorpalette.c: #include "gimp-intl.h"

2007-10-12  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorselectorpalette.c: 
	* plug-ins/twain/twain.c: marked strings for translation (bug #485937).

2007-10-12  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Fix off by one error.
	Stop on third digit after backslash when reading octal character.
	Original cause of bug #485538.

2007-10-11  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	left-align the size entries.

2007-10-11  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): if we need to
	delete/create tools on button press because the active tool
	doesn't support changing drawables, make sure the newly created
	tool gets its focus_display and modifier states set correctly.
	Fixes bug #485119. Improved disabled debug output.

	* app/tools/gimptool.c: stylistic cleanup in debug output.

2007-10-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.[ch]: moved the new string
	escape function here and also it for the non-interactive case.

	* plug-ins/script-fu/script-fu-interface.c: changed accordingly.

2007-10-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c: don't use
	g_strescape() as it mangles UTF-8 strings. Introduced our own
	escape function instead. Fixes bug #485538.

2007-10-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_add_script):